Hacked in creative commons and apache license blurbs -- Lucky, you may want to review those.

--- a/index.html
+++ b/index.html
@@ -560,6 +560,19 @@
                 </div>
             </div>
         </div>
+        
+        <!-- FAISAL: added licenses here -->
+		<div class="row v-center" style="font-size: 12px;">
+			<div class="col-sm-12" style="padding-top: 30px;">
+				<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+			</div>
+		</div>
+		
+		<div class="row v-center" style="font-size: 12px;">	
+			<div class="col-sm-12" style="padding-top: 10px;">
+			Software developed by or in association with the <b>Small Data Lab</b> is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License v2.0</a>.
+			</div>	
+		</div>
     </div>
 </footer>            <!-- Placed at the end of the document so the pages load faster -->
             <script src="startup/common-files/js/jquery-1.10.2.min.js"></script>
