Temporarily removed ToS and privacy policy links until we know what to put there.

--- a/index.html
+++ b/index.html
@@ -547,9 +547,9 @@
             </div>
             <div class="col-sm-6">
                 <div class="additional-links">
-                    Be sure to take a look at our <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a>
+                    <!-- Be sure to take a look at our <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a>
                     <br/>
-                    <br/>
+                    <br/>  -->
                     <a href="http://benefunder.org/CauseDetail/Show/124">Fund our work on <img src="startup/common-files/icons/benefunder.png" height="50" alt=""></a>
                 </div>
             </div>
