Removed pushcart beta signup bar.

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
             <script src="startup/common-files/js/jquery.backgroundvideo.min.js"></script>
             <script src="startup/common-files/js/froogaloop.min.js"></script>
             <script src="startup/common-files/js/startup-kit.js"></script>
-            <script type="text/javascript" src="http://s3.amazonaws.com/scripts.hellobar.com/c782fc7a9425ae0ea1f36a28a3e9b495297685ad.js"></script>
+            <!-- <script type="text/javascript" src="http://s3.amazonaws.com/scripts.hellobar.com/c782fc7a9425ae0ea1f36a28a3e9b495297685ad.js"></script> -->
             <script>
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
