--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                             
                         </div>
                         <div class="info">
-                            Lonqi Yang, <br/>PhD Candidate
+                            Longqi Yang, <br/>PhD Candidate
                         </div>
                     </div>
                 </div>
