--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- end -->
         <link rel="stylesheet" href="startup/common-files/css/animations.css">
         <link rel="stylesheet" href="static/css/style.css">
-        <link href=''http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Lato:100,300" rel='stylesheet' type='text/css'>
         
 
 
@@ -32,7 +32,10 @@
             <div class="navbar col-sm-12" role="navigation">
                 <div class="navbar-header" style="font-family: 'Lato', sans-serif;">
                     <button type="button" class="navbar-toggle"></button>
-                    <a class="brand" href="#"><img src="startup/common-files/icons/sdl_logo12.png" width="50" height="50" alt="">the small data lab</a>
+                    <a class="brand" href="#" style="padding-right: 15px;">
+                        <img src="startup/common-files/icons/sdl_logo12.png" width="50" height="50" alt="">
+                            the small data lab <a class="brand" style="font-weight: 400; color: #777;" href="http://tech.cornell.edu/">@ CornellTech</a>
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse pull-right">
                     <ul class="nav pull-left">
@@ -543,7 +546,7 @@
     <div class="container">
         <div class="row v-center">
             <div class="col-sm-3">
-                <a class="brand" href="#">the small data lab <br/> @ CornellTech</a>
+                <a class="brand" href="#">the small data lab <br/> <a class="brand" href="http://tech.cornell.edu">@ CornellTech</a></a>
             </div>
             <div class="col-sm-6">
                 <div class="additional-links">
