--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </head>
 
     <body>
+     <a href="itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://github.com/smalldatalab/ios-ohmage/releases/download/v1.1/ohmage.plist" id="text">
         <div class="page-wrapper"><header class="header-11">
     <div class="container">
         <div class="row">
