Try to fix Ohmage app link to work

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </head>
 
     <body>
-     <a href="itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=https://github.com/smalldatalab/ios-ohmage/releases/download/v1.1/ohmage.plist" id="text">
         <div class="page-wrapper"><header class="header-11">
     <div class="container">
         <div class="row">
@@ -538,6 +537,7 @@
                 <h6>Drop us a line</h6>
                 <div class="links">
                     <a href="#"><span class="fui-mail"></span> destrin@cornell.edu</a>
+                    <a href="itms-services://?action=download-manifest&url=https://github.com/smalldatalab/ios-ohmage/releases/download/v1.1/ohmage.plist" id="text">
                 </div>
             </div>
         </div>
