--- a/packages/ios/ohmage.html
+++ b/packages/ios/ohmage.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">    
   <head>      
     <title>Install ohmage</title>      
-    <meta http-equiv="refresh" content="0;URL='itms-services://?action=download-manifest&url=http://smalldata.io/packages/ios/ohmage.plist'"/>    
+    <meta http-equiv="refresh" content="0;URL='itms-services://?action=download-manifest&url=https://github.com/smalldatalab/ios-ohmage/releases/download/v1.1/ohmage.plist'"/>    
   </head>    
   <body>
- <a href="itms-services://?action=download-manifest&url=http://smalldata.io/packages/ios/ohmage.plist">     
-    <p>Install ohmage</p> 
+ <a href="itms-services://?action=download-manifest&url=https://github.com/smalldatalab/ios-ohmage/releases/download/v1.1/ohmage.plist">
+    <p>Install ohmage</p>
 </a>
   </body>  
 </html>    
