--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 
-<title></title>s
+<title></title>
     </head>
 
     <body>
@@ -155,7 +155,7 @@
                         <a href="http://ohmage-omh.smalldata.io/" class="overlay"><img src="startup/common-files/icons/ohmage.png" width="50" height="50" alt=""></a>
                     </div>
                     <div class="info" style="text-align:justify">
-                        <a href="http://ohmage.org/" class="name color-belize-hole" align="justify">ohmage</a>
+                        <a href="http://ohmage-omh.smalldata.io/" class="name color-belize-hole" align="justify">ohmage</a>
                         <font size="3">ohmage is an open-source participatory sensing technology platform with companion apps for iOS and Android. It supports expressive project authoring; mobile phone-based data capture through both inquiry-based surveys and automated data capture as well as temporally and/or spatially triggered reminders, data visualization and real-time feedback; privacy respecting data management; and extensible data exploration. All captured data are automatically timestamped, geocoded and uploaded for analysis and visualization.
                         </font>
                     </div>
