--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                         <a href="http://ohmage-omh.smalldata.io/" class="overlay"><img src="startup/common-files/icons/ohmage.png" width="50" height="50" alt=""></a>
                     </div>
                     <div class="info" style="text-align:justify">
-                        <a href="http://ohmage-omh.smalldata.io/" class="name color-belize-hole" align="justify">ohmage</a>
-                        <font size="3">ohmage is an open-source participatory sensing technology platform with companion apps for iOS and Android. It supports expressive project authoring; mobile phone-based data capture through both inquiry-based surveys and automated data capture as well as temporally and/or spatially triggered reminders, data visualization and real-time feedback; privacy respecting data management; and extensible data exploration. All captured data are automatically timestamped, geocoded and uploaded for analysis and visualization.
+                        <a href="http://ohmage-omh.smalldata.io/" class="name color-belize-hole" align="justify">ohmage-omh</a>
+                        <font size="3">ohmage-omh is an open-source participatory sensing technology platform with companion apps for iOS and Android. It supports expressive project authoring; mobile phone-based data capture through both inquiry-based surveys and automated data capture as well as temporally and/or spatially triggered reminders, data visualization and real-time feedback; privacy respecting data management; and extensible data exploration. All captured data are automatically timestamped, geocoded and uploaded for analysis and visualization.
                         </font>
                     </div>
                 </div>
@@ -320,6 +320,98 @@
     </div>
 </section>
 
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Yada</h3>
+
+                <p>Yada is a novel system that bootstraps food preference using a simple, visual quiz-based user interface. We get rid of the requirements for users' historical diet records and completely bootstrap food preference from scratch. This design enables context aware preference learning that adapts preference information in various conditions.</p>
+
+                <p>As a light-weight and efficient food preference elicitation system, Yada will provide a personalized user experience capable of fueling a wide range of applications in domains including health care, diet planning and restaurant recommendation.</p>
+
+                <p><a href="http://www.yadagame.com">yadagame.com</a></p>
+
+                <!-- <div class="features">
+                    <div class="box">
+                        <img src="startup/common-files/icons/simple@2x.png" width="100" height="100" alt="">
+                            <h6>Simple</h6>
+
+                            <p></p>
+                            </div>
+                    <div class="box">
+                        <img src="startup/common-files/icons/social@2x.png" width="100" height="100" alt="">
+                            <h6>Social</h6>
+
+                            <p>You can share your Ora with as few or as many people as you would like. And they can do the same, building uniquely personal circles of friends and family connected to one another.</p>
+                            </div>
+                    <div class="box">
+                        <img src="startup/common-files/icons/secure@2x.png" width="100" height="100" alt="">
+                            <h6>Secure</h6>
+
+                            <p>We've  taken the time to make sure you have control over your privacy. Share as little or as many signals as you would like with specific people in your Ora network.</p>
+                            </div>
+                </div> -->
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="startup/common-files/img/content/yada.png"  alt="">
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>YADL</h3>
+
+                <p>Your Activities of Daily Living (YADL) uses images of Activities of Daily Living (ADLs) to improve patients' experience and survey efficiency. YADL encourages users to provide customized activity descriptions to construct a personalized, fine-grained profile of their ADL functionality.</p>
+
+                <p>YADL-reported data can be presented directly to clinicians along with other patient data, and made available with other patient-approved applications via an API.</p>
+
+                <div class="features">
+                    <div class="box">
+                        <!-- <img src="startup/common-files/iscons/simple@2x.png" width="70" height="70" alt=""> -->
+                            <!-- <h6>Simple</h6> -->
+
+                            <p>Extremely simple one tap recording</p>
+                    </div>
+                    <div class="box">
+                        <!-- <img src="startup/common-files/icons/social@2x.png" width="100" height="100" alt=""> -->
+                            <!-- <h6>Social</h6> -->
+
+                            <p>Personalized selection of activities of daily living by patients</p>
+                            </div>
+                    <div class="box">
+                        <!-- <img src="startup/common-files/icons/secure@2x.png" width="100" height="100" alt=""> -->
+                            <!-- <h6>Secure</h6> -->
+
+                            <p>Allows patients to select YADL button and record difficulty completing daily activities</p>
+                            </div>
+                </div>
+
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="startup/common-files/img/content/yadl.png"  alt="" style="height: 50em;">
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
 
@@ -336,7 +428,7 @@
 
                         </div>
                         <div class="info">
-                            Deborah Estrin, <br/>
+                            <a href="http://destrin.smalldata.io/">Deborah Estrin</a>, <br/>
                             <a href="http://tech.cornell.edu/people/deborah-estrin">Professor of Computer Science</a>
                         </div>
                     </div>
@@ -355,10 +447,44 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/lauren-s.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/ivy-w.png" alt=""></div>
                     </div>
                     <div class="info">
-                       Lauren Shaw, <br/>Study Coordinator
+                       Ivy Wu, <br/>Project Manager
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="members">
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/narumi-t.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                       Narumi Toida, <br/>Study Coordinator
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        <br/>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+            <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
+                    </div>
+                    <div class="info">
+                        <br/>
+                        <br/>
                     </div>
                 </div>
             </div>
@@ -406,11 +532,11 @@
                 <div class="member-wrapper">
                     <div class="member">
                         <div class="photo-wrapper">
-                            <div><img src="startup/common-files/img/crew/lucky-g.png" alt=""></div>
+                            <div><img src="startup/common-files/img/crew/judy-w.png" alt=""></div>
 
                         </div>
                         <div class="info">
-                            Lucky Gunasekara, <br/>Technologist-in-Residence
+                            Judy Wu, <br/>Technologist-in-Residence
                         </div>
                     </div>
                 </div>
