--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <a href="#eaf" class="overlay"><img src="startup/common-files/icons/EAF.png" width="50" height="50" alt=""><!--<span class="fui-eye"></span>--></a>
                     </div>
                     <div class="info" style="text-align:justify">
-                        <a href="#eaf" class="name color-pomegranate" align="justify">EAF - Email Analysis Framework</a>
+                        <a href="https://eaf.smalldata.io/" class="name color-pomegranate" align="justify">EAF - Email Analysis Framework</a>
                         <font size ="3">The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware, in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control which is a core part of the framework.</font>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                         <a href="#context" class="overlay"><img src="startup/common-files/icons/context.png" width="50" height="50" alt=""></a>
                     </div>
                     <div class="info" style="text-align:justify">
-                        <a href="#context" class="name color-green-sea">Context</a>
+                        <a href="https://play.google.com/store/apps/details?id=io.smalldatalab.android.context" class="name color-green-sea">Context</a>
                         <font size="3">Context is an Android app that collects contextual information from your phone, including screen on/off events, app usage, phone calls and SMS records, and web browsing history. The collected data is uploaded to ohmage and processed by Lifestreams to extract meaningful contextual information.
                             <hr/>
                             We only collect the time and length of your phone calls and SMS, and DO NOT record calls or read the SMS content.
@@ -311,7 +311,7 @@
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="startup/common-files/img/content/iphone@2x.png"  alt="">
+                            <img src="startup/common-files/img/content/ora-phone.png"  alt="">
                                 </div>
                     </div>
                 </div>
@@ -325,13 +325,11 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3>Yada</h3>
+                <h3><a href="http://www.yadagame.com">Yada</a></h3>
 
                 <p>Yada is a novel system that bootstraps food preference using a simple, visual quiz-based user interface. We get rid of the requirements for users' historical diet records and completely bootstrap food preference from scratch. This design enables context aware preference learning that adapts preference information in various conditions.</p>
 
                 <p>As a light-weight and efficient food preference elicitation system, Yada will provide a personalized user experience capable of fueling a wide range of applications in domains including health care, diet planning and restaurant recommendation.</p>
-
-                <p><a href="http://www.yadagame.com">yadagame.com</a></p>
 
                 <!-- <div class="features">
                     <div class="box">
@@ -372,7 +370,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3>YADL</h3>
+                <h3><a href="http://yadl.yadagame.com/">YADL</a></h3>
 
                 <p>Your Activities of Daily Living (YADL) uses images of Activities of Daily Living (ADLs) to improve patients' experience and survey efficiency. YADL encourages users to provide customized activity descriptions to construct a personalized, fine-grained profile of their ADL functionality.</p>
 
@@ -404,7 +402,7 @@
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="startup/common-files/img/content/yadl.png"  alt="" style="height: 50em;">
+                            <img src="startup/common-files/img/content/yadl-phone.png"  alt="" style="height: 50em;">
                                 </div>
                     </div>
                 </div>
@@ -447,7 +445,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/ivy-w.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/ivy_wu.png" alt=""></div>
                     </div>
                     <div class="info">
                        Ivy Wu, <br/>Project Manager
@@ -519,7 +517,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/diana-f.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/diana-test.png" alt=""></div>
                     </div>
                     <div class="info">
                         Diana Freed,<br/> Technologist-in-Residence
