Edit Diana's image

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/ivy_wu.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/ivy_resized.png" alt=""></div>
                     </div>
                     <div class="info">
                        Ivy Wu, <br/>Project Manager
@@ -517,7 +517,7 @@
             <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
-                        <div><img src="startup/common-files/img/crew/diana-test.png" alt=""></div>
+                        <div><img src="startup/common-files/img/crew/diana_f.jpg" alt=""></div>
                     </div>
                     <div class="info">
                         Diana Freed,<br/> Technologist-in-Residence
