Added Thomas Tsang

--- a/index.html
+++ b/index.html
@@ -453,6 +453,17 @@
                 </div>
             </div>
         </div>
+        <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/ThomasTsangOfficialPic.jpg" alt=""></div>
+                    </div>
+                    <div class="info">
+                       Thomas Tsang, <br/>Clinical Advisor in Residence
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="members">
             <div class="member-wrapper">
                 <div class="member">
