--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                     </div>
                 </div>
             </div>
-            <div class="member-wrapper">
+            <div class="memer-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
                         <div><img src="startup/common-files/img/crew/blank.png" alt=""></div>
