Update for the projects

--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
     </div>
 </section>
 
-<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<!-- <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;"> -->
 
-<section class="projects-4" id="sdx">
+<!-- <section class="projects-4" id="sdx">
     <div class="container">
-        <h3>Meet sdX<br> Creating community infrastructure for small data apps and services</h3>
+        <h3>Projects and Apps</h3>
 
         <div class="projects row">
             <div class="project-wrapper col-sm-3">
                 <div class="project">
                     <div class="photo-wrapper bg-alizarin">
                         <div class="photo"></div>
-                        <a href="#eaf" class="overlay"><img src="startup/common-files/icons/EAF.png" width="50" height="50" alt=""><!--<span class="fui-eye"></span>--></a>
+                        <a href="#eaf" class="overlay"><img src="startup/common-files/icons/EAF.png" width="50" height="50" alt=""></a>
                     </div>
                     <div class="info" style="text-align:justify">
                         <a href="https://eaf.smalldata.io/" class="name color-pomegranate" align="justify">EAF - Email Analysis Framework</a>
@@ -141,8 +141,9 @@
                             <a href="https://github.com/ohmage/lifestreams" class="overlay"><img src="startup/common-files/icons/lifestreams.png" width="50" height="50" alt=""></a>
                     </div>
                     <div class="info" style="text-align:justify">
-                        <a href="https://github.com/ohmage/lifestreams" class="name color-orange" align="justify">Lifestreams</a>
-                        <font size="3">Lifestreams is a streaming processing framework for small data. It consists of modules that retrieve data from various sources (ohmage, Moves, Gmail, etc) and transform them into meaningful information in real-time. While still under active development, Lifestreams has been used to drive a dashboard for monitoring the mobility of chronic pain patients, as well as Ora, one of the Small Data Lab's upcoming apps.
+                        <a href="http://newsfie.org" class="name color-orange" align="justify">Newsfie</a>
+                        <font size="3">
+                        Newsfie enable instant news personalization using users' diverse digital breadcrumbs. It recommends news articles based on users' tweets, facebook posts, email, and slack communications. Everyone is encouraged to experience it with their own digital traces, or take a peek at what Newfie recommends to other famous people based on their public Twitter data, including Barack Obama, Bill Gates, Neil Patrick Harris, etc.. Newsfie works for any kind of text records. For example, you can check out Newsfie's recommendations to Charles Dickens based on his letter written in 19 century. Newsfie technology allows users to further fine-tune the recommendations through "More like this", and "Less like that" buttons that provide continuously personalize their news experiences.
                         </font>
                     </div>
                 </div>
@@ -154,9 +155,14 @@
                         <div class="photo"></div>
                         <a href="http://ohmage-omh.smalldata.io/" class="overlay"><img src="startup/common-files/icons/ohmage.png" width="50" height="50" alt=""></a>
                     </div>
-                    <div class="info" style="text-align:justify">
-                        <a href="http://ohmage-omh.smalldata.io/" class="name color-belize-hole" align="justify">ohmage-omh</a>
+                    <div class="info" style="text-align:justify"> -->
+                        <!-- <a href="http://ohmage-omh.smalldata.io/" class="name color-belize-hole" align="justify">ohmage-omh</a>
                         <font size="3">ohmage-omh is an open-source participatory sensing technology platform with companion apps for iOS and Android. It supports expressive project authoring; mobile phone-based data capture through both inquiry-based surveys and automated data capture as well as temporally and/or spatially triggered reminders, data visualization and real-time feedback; privacy respecting data management; and extensible data exploration. All captured data are automatically timestamped, geocoded and uploaded for analysis and visualization.
+                        </font> -->
+                       <!--  <a href="" class="name color-belize-hole" align="justify">Grouplink</a>
+                        <font size="3">
+                          Coming soon!
+
                         </font>
                     </div>
                 </div>
@@ -169,18 +175,18 @@
                         <a href="#context" class="overlay"><img src="startup/common-files/icons/context.png" width="50" height="50" alt=""></a>
                     </div>
                     <div class="info" style="text-align:justify">
-                        <a href="https://play.google.com/store/apps/details?id=io.smalldatalab.android.context" class="name color-green-sea">Context</a>
-                        <font size="3">Context is an Android app that collects contextual information from your phone, including screen on/off events, app usage, phone calls and SMS records, and web browsing history. The collected data is uploaded to ohmage and processed by Lifestreams to extract meaningful contextual information.
-                            <hr/>
-                            We only collect the time and length of your phone calls and SMS, and DO NOT record calls or read the SMS content.
-                            </font>
+                        <a href="https://play.google.com/store/apps/details?id=io.smalldatalab.android.context" class="name color-green-sea">Lümbr</a>
+                        <font size="3">
+                          Coming soon!
+                        </font>
+
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--/.container-->
-</section>
+<!-- </section> -->
 <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
 <section class="content-16 v-center" id="apps">
     <div>
@@ -276,9 +282,9 @@
     </div>
 </section>
 
-<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<!-- <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;"> -->
 
-<section class="content-10">
+<!-- <section class="content-10">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
@@ -319,38 +325,17 @@
         </div>
     </div>
 </section>
-
+-->
 <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
 <section class="content-10">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="http://www.yadagame.com">Yada</a></h3>
+                <h3><a href="http://bit.ly/plateclick">PlateClick</a></h3>
+                <img src="startup/common-files/img/content/PlateClick.png" class="img-responsive" style="height: 3em;">
 
-                <p>Yada is a novel system that bootstraps food preference using a simple, visual quiz-based user interface. We get rid of the requirements for users' historical diet records and completely bootstrap food preference from scratch. This design enables context aware preference learning that adapts preference information in various conditions.</p>
-
-                <p>As a light-weight and efficient food preference elicitation system, Yada will provide a personalized user experience capable of fueling a wide range of applications in domains including health care, diet planning and restaurant recommendation.</p>
-
-                <!-- <div class="features">
-                    <div class="box">
-                        <img src="startup/common-files/icons/simple@2x.png" width="100" height="100" alt="">
-                            <h6>Simple</h6>
-
-                            <p></p>
-                            </div>
-                    <div class="box">
-                        <img src="startup/common-files/icons/social@2x.png" width="100" height="100" alt="">
-                            <h6>Social</h6>
-
-                            <p>You can share your Ora with as few or as many people as you would like. And they can do the same, building uniquely personal circles of friends and family connected to one another.</p>
-                            </div>
-                    <div class="box">
-                        <img src="startup/common-files/icons/secure@2x.png" width="100" height="100" alt="">
-                            <h6>Secure</h6>
-
-                            <p>We've  taken the time to make sure you have control over your privacy. Share as little or as many signals as you would like with specific people in your Ora network.</p>
-                            </div>
-                </div> -->
+                <p>PlateClick is a novel system for efficient food preference elicitation using a simple, visual quiz-based user interface. We leverage a pairwise comparison approach with only visual content and propose a CNN based online learning framework that learns users' preferences across a large scale dataset based on a small number of interactions. The online learning framework could be used to enhance the interplay between human hedonic and content similarities in solving general human-in-the-loop problems. We envision that PlateClick could be used to capture personal diet profiles and fuel a wide range of applications in healthcare and commercial recommender systems.
+                </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
                 <div id="c-10_myCarousel" class="carousel slide">
@@ -370,39 +355,16 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h3><a href="http://yadl.yadagame.com/">YADL</a></h3>
+                <h3><a href="http://newsfie.org">Newsfie</a></h3>
 
-                <p>Your Activities of Daily Living (YADL) uses images of Activities of Daily Living (ADLs) to improve patients' experience and survey efficiency. YADL encourages users to provide customized activity descriptions to construct a personalized, fine-grained profile of their ADL functionality.</p>
-
-                <p>YADL-reported data can be presented directly to clinicians along with other patient data, and made available with other patient-approved applications via an API.</p>
-
-                <div class="features">
-                    <div class="box">
-                        <!-- <img src="startup/common-files/iscons/simple@2x.png" width="70" height="70" alt=""> -->
-                            <!-- <h6>Simple</h6> -->
-
-                            <p>Extremely simple one tap recording</p>
-                    </div>
-                    <div class="box">
-                        <!-- <img src="startup/common-files/icons/social@2x.png" width="100" height="100" alt=""> -->
-                            <!-- <h6>Social</h6> -->
-
-                            <p>Personalized selection of activities of daily living by patients</p>
-                            </div>
-                    <div class="box">
-                        <!-- <img src="startup/common-files/icons/secure@2x.png" width="100" height="100" alt=""> -->
-                            <!-- <h6>Secure</h6> -->
-
-                            <p>Allows patients to select YADL button and record difficulty completing daily activities</p>
-                            </div>
-                </div>
-
+                <p>Newsfie enable instant news personalization using users' diverse digital breadcrumbs. It recommends news articles based on users' tweets, facebook posts, email, and slack communications. Everyone is encouraged to experience it with their own digital traces, or take a peek at what Newfie recommends to other famous people based on their public Twitter data, including Barack Obama, Bill Gates, Neil Patrick Harris, etc.. Newsfie works for any kind of text records. For example, you can check out Newsfie's recommendations to Charles Dickens based on his letter written in 19 century. Newsfie technology allows users to further fine-tune the recommendations through "More like this", and "Less like that" buttons that provide continuously personalize their news experiences.
+                </p>
             </div>
             <div class="col-sm-5 col-sm-offset-1 text-center">
                 <div id="c-10_myCarousel" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="startup/common-files/img/content/yadl-phone.png"  alt="" style="height: 50em;">
+                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
                                 </div>
                     </div>
                 </div>
@@ -410,6 +372,126 @@
         </div>
     </div>
 </section>
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a href="http://yadl.yadagame.com/">YADL</a></h3>
+
+                <p>Your Activities of Daily Living (YADL) is an image-based survey for patients with arthritis. It uses images of Activities of Daily Living (ADLs) to improve patients' experience. The interface possesses several added benefits: wider coverage of ADLs, engaged and personalized experience, and accurate capture of individual health situations. YADL holds the promise for improving the efficacy of reporting ADLs and enhancing doctor-patient communications.
+                </p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="startup/common-files/img/content/YADL.png"  alt="">
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a href="">Grouplink</a></h3>
+
+                <p>Coming Soon!
+                </p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a href="">Lümbr</a></h3>
+
+                <p>Coming Soon!
+                </p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a href="http://ohmage-omh.smalldata.io/">ohmage-omh</a></h3>
+
+                <p>ohmage-omh is an open-source, open-architecture, mobile health platform intended for rapid prototyping and piloting of mobile health applications. Participants of studies run specified mobile applications on their smartphone (Android 3.0.x+ and iOS ). A data storage unit securely stores the information from the participant under their separate account. ohmage-omh supports Open mHealth (omh) read and write APIs. The Admin dashboard retrieves data from the database using the omh read API in accordance with the access credentials of the logged-in user.
+                </p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="startup/common-files/img/content/ohmage-omh.png"  alt="">
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
+<section class="content-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3><a href="https://eaf.smalldata.io">EAF/Reddit</a></h3>
+
+                <p>The EAF is a personal text analysis framework that focuses on extracting statistics and structured information from private text sources, such as email, and generating inferences about the internal state of the user in terms of the frequency and style in which they communicate with others. The EAF is middleware in the sense that it does not perform visualization or predictions on its own; instead, the computed data are provided to third-party applications at the user's discretion, through a fine-grained per-application access control mechanism.
+                </p>
+                <p>
+                The EAF analysis core is being updated to make use of large public corpora of conversational text, specifically the recently-released <a href="https://archive.org/details/2015_reddit_comments_corpus">reddit corpus</a>, in order to robustly train models that can then be applied to sparse personal text streams such as email.
+                </p>
+
+                <p><a href="https://eaf.smalldata.io">Check it out!</a></p>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1 text-center">
+                <div id="c-10_myCarousel" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <!-- <img src="startup/common-files/img/content/YADL.png"  alt=""> -->
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 
 <hr style="color:#bdc3c7;background-color:#bdc3c7;height:2px;width:100%;">
 
