Update content of the Pushcart

--- a/index.html
+++ b/index.html
@@ -205,8 +205,12 @@
                             <div id="c-17_myCarousel" class="carousel slide">
                 <div>
                     <div>
-                    <h3>Fully integrated into online grocery services Instacart, FreshDirect, and Peapod, Pushcart is an small data email service helping users define nutritional goals and providing direct feedback on how their grocery purchases support their personal health goals.
-                    </h3>
+                    <p>
+                        Fully integrated into online grocery services Instacart, FreshDirect, and Peapod, Pushcart is an small data email service helping users define nutritional goals and providing direct feedback on how their grocery purchases support their personal health goals.
+                    </p>
+                    <p>
+                        Pushcart works seamlessly with your online grocery service to analyze your purchases and map them to your personal health goals. No receipt scanning, no apps to install. Just clear insights and tips on achieving your health goals delivered straight to your email inbox.
+                    </p>
                     </div>
                 </div>
             </div>
