Update the nav bar

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 </div>
                 <div class="collapse navbar-collapse pull-right">
                     <ul class="nav pull-left">
-                        <li><a href="#work">our work</a></li>
-                        <li><a href="#sdx">sdX</a></li>
-                        <li><a href="#apps">apps</a></li>
-                        <li><a href="#team">team</a></li>
-                        <li><a href="research.html">research</a></li>
+                        <li><a href="#work">Small Data</a></li>
+                        <li><a href="#apps">Projects</a></li>
+                        <li><a href="http://sdxworkshop.smalldata.nyc/" target="_blank">sdX</a></li>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="research.html">Publications</a></li>
                     </ul>
                 </div>
             </div>
@@ -605,7 +605,7 @@
                         <div><img src="startup/common-files/img/crew/diana_f.jpg" alt=""></div>
                     </div>
                     <div class="info">
-                        Diana Freed,<br/> Technologist-in-Residence
+                        Diana Freed,<br/>Technologist-in-Residence
                     </div>
                 </div>
             </div>
