--- a/research.html
+++ b/research.html
@@ -34,11 +34,11 @@
                         </div>
                         <div class="collapse navbar-collapse pull-right">
                             <ul class="nav pull-left">
-                                <li><a href="index.html#work">our work</a></li>
-                                <li><a href="index.html#sdx">sdX</a></li>
-                                <li><a href="index.html#apps">apps</a></li>
-                                <li><a href="index.html#team">team</a></li>
-                                <li><a href="index.html#research.html">research</a></li>
+                                <li><a href="index.html#work">Small Data</a></li>
+                                <li><a href="index.html#apps">Projects</a></li>
+                                <li><a href="http://sdxworkshop.smalldata.nyc/" target="_blank">sdX</a></li>
+                                <li><a href="index.html#team">Team</a></li>
+                                <li><a href="research.html">Publications</a></li>
                             </ul>
                         </div>
                     </div>
