added Dan Stein

--- a/index.html
+++ b/index.html
@@ -456,6 +456,17 @@
         <div class="member-wrapper">
                 <div class="member">
                     <div class="photo-wrapper">
+                        <div><img src="startup/common-files/img/crew/Dan.jpg" alt=""></div>
+                    </div>
+                    <div class="info">
+                       Dan Stein, <br/>Clinical Advisor in Residence
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="member-wrapper">
+                <div class="member">
+                    <div class="photo-wrapper">
                         <div><img src="startup/common-files/img/crew/ThomasTsangOfficialPic.jpg" alt=""></div>
                     </div>
                     <div class="info">
